improve support for valFT

--- a/conf/nn/module/default.yaml
+++ b/conf/nn/module/default.yaml
@@ -5,8 +5,8 @@ defaults:
   #- model: roberta
   # - model: bert
 
-# _target_: tvp.pl_module.image_classifier.ImageClassifier
-_target_: tvp.pl_module.text_classifier.TextClassifier
+_target_: tvp.pl_module.image_classifier.ImageClassifier
+#_target_: tvp.pl_module.text_classifier.TextClassifier
 x_key: ${conventions.x_key}
 y_key: ${conventions.y_key}
 # attn_mask_key: ${conventions.attn_mask_key} # put this in bert.yml
