--- a/conf/nn/data/default.yaml
+++ b/conf/nn/data/default.yaml
@@ -5,7 +5,7 @@ batch_size:
   val: 32
 data_path: ${oc.env:PROJECT_ROOT}/data
 defaults:
-- dataset: resisc45
+- dataset: dtd
 - _self_
 num_workers:
   test: 0
