ready to perform acc vs. cos sim analysis

--- a/conf/nn/data/dataset/food101.yaml
+++ b/conf/nn/data/dataset/food101.yaml
@@ -1,4 +1,4 @@
 # https://data.vision.ee.ethz.ch/cvl/datasets_extra/food-101/
-dataset_name: food101
-ft_epochs: ?? 
+dataset_name: Food101
+ft_epochs: 4
 num_classes: 101 
