--- a/conf/task_vectors.yaml
+++ b/conf/task_vectors.yaml
@@ -15,26 +15,26 @@ defaults:
 - _self_
 epoch_divisor: None
 eval_datasets:
-- Cars
+- CIFAR100
 - DTD
 - EuroSAT
 - GTSRB
 - MNIST
 - RESISC45
-- SUN397
 - SVHN
-- CIFAR10
-- CIFAR100
-- STL10
-- Food101
-- Flowers102
-- FER2013
-- PCAM
-- OxfordIIITPet
-- RenderedSST2
-- EMNIST
-- FashionMNIST
-- KMNIST
+# - Cars
+# - SUN397
+# - CIFAR10
+# - STL10
+# - Food101
+# - Flowers102
+# - FER2013
+# - PCAM
+# - OxfordIIITPet
+# - RenderedSST2
+# - EMNIST
+# - FashionMNIST
+# - KMNIST
 eval_on_train: false
 misc:
   cache_dir: null
@@ -57,23 +57,23 @@ task_vectors:
   ties_lambda: 1
   ties_topk: 0.15
   to_apply:
-  - Cars
+  - CIFAR100
   - DTD
   - EuroSAT
   - GTSRB
   - MNIST
   - RESISC45
-  - SUN397
   - SVHN
-  - CIFAR10
-  - CIFAR100
-  - STL10
-  - Food101
-  - Flowers102
-  - FER2013
-  - PCAM
-  - OxfordIIITPet
-  - RenderedSST2
-  - EMNIST
-  - FashionMNIST
-  - KMNIST
+  # - Cars
+  # - SUN397
+  # - CIFAR10
+  # - STL10
+  # - Food101
+  # - Flowers102
+  # - FER2013
+  # - PCAM
+  # - OxfordIIITPet
+  # - RenderedSST2
+  # - EMNIST
+  # - FashionMNIST
+  # - KMNIST
