--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -22,24 +22,36 @@ monitor:
   mode: 'min'
 
 callbacks:
-  - _target_: pytorch_lightning.callbacks.EarlyStopping
-    patience: 424242
-    verbose: False
-    monitor: ${train.monitor.metric}
-    mode: ${train.monitor.mode}
+  # - _target_: pytorch_lightning.callbacks.EarlyStopping
+  #   patience: 424242
+  #   verbose: False
+  #   monitor: ${train.monitor.metric}
+  #   mode: ${train.monitor.mode}
 
-  - _target_: pytorch_lightning.callbacks.ModelCheckpoint
-    save_top_k: 1
-    verbose: False
-    monitor: ${train.monitor.metric}
-    mode: ${train.monitor.mode}
+  # - _target_: pytorch_lightning.callbacks.ModelCheckpoint
+  #   save_top_k: 1
+  #   verbose: False
+  #   monitor: ${train.monitor.metric}
+  #   mode: ${train.monitor.mode}
 
   - _target_: pytorch_lightning.callbacks.LearningRateMonitor
     logging_interval: "step"
     log_momentum: False
 
-  - _target_: pytorch_lightning.callbacks.progress.tqdm_progress.TQDMProgressBar
+  - _target_: pytorch_lightning.callbacks.progress.RichProgressBar
     refresh_rate: 1
+    theme:
+      _target_: lightning.pytorch.callbacks.progress.rich_progress.RichProgressBarTheme
+      description: "#6D213C"
+      progress_bar: "#9000B3"
+      progress_bar_finished: "#228B22"
+      progress_bar_pulse: "#6206E0"
+      batch_progress: "E6AF2E"
+      time: "#6F8AB7"
+      processing_speed: "#6F8AB7"
+      metrics: "#6F8AB7"
+      metrics_text_delimiter: "\n"
+      metrics_format: ".3e"
 
 logging:
   upload:
