--- a/conf/nn/module/default.yaml
+++ b/conf/nn/module/default.yaml
@@ -15,7 +15,7 @@ optimizer:
   # _target_: torch.optim.SGD
   # lr: 0.1
   # momentum: 0.9
-  weight_decay: 1e-1
+  # weight_decay: 1e-1
 
 lr_scheduler:
   # NOTE in case of multiple lr schedulers, to keep compatibility with current code, cosine annealing lr scheduler should be the first one
